--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,107 @@
 @import-normalize; /* bring in normalize.css styles */
 
-body {
+@font-face {
+  font-family: Roboto-400;
+  src: url(../src/fonts/Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-family: Roboto-500;
+  src: url(../src/fonts/Roboto-Medium.ttf);
+}
+
+@font-face {
+  font-family: Roboto-700;
+  src: url(../src/fonts/Roboto-Bold.ttf);
+}
+
+:root {
+  /* COLORS */
+  --black-color: #040404;
+  --orange-main-color: #e6533c;
+  --orange-secondary-color: #ef8964;
+  --beige-color: #efa082;
+  --white-color: #efede8;
+  --success-color: #3cbf61;
+  --error-color: #d80027;
+  --variant-error-color: #e9101d;
+  --variant-success-color: #3cbf61;
+  --option-list-color: #1c1c1c;
+  --radio-color: #636366;
+
+  /* FONTS */
+  --regular: font-weight: 400;
+  --medium: font-weight: 500;
+  --bold: font-weight: 700;
+
+  /* ANIMATIONS */
+  --function-duration: 350ms;
+  --function-timing: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.modal-backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transform: scale(1.3);
+}
+
+
+body,
+button,
+a,
+input,
+p {
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
+img {
+  display: block;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+p {
+  padding: 0;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -12,4 +113,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
