--- a/src/pages/ErrorPage/ErrorPage.module.css
+++ b/src/pages/ErrorPage/ErrorPage.module.css
@@ -2,17 +2,18 @@
     position: relative;
     min-height: 100vh;
     margin: 0;
-    background-color: rgba(230, 83, 60, 1);
+    background-color: #000000;
     display: flex;
-    align-items: center;
 }
 
 .errorContainer {
     background-color: rgba(230, 83, 60, 1);
     padding-left: 96px;
     width: 669px;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 24px;
 
 }
@@ -50,4 +51,9 @@
     line-height: 24px;
     letter-spacing: 0em;
     text-align: center;
+}
+
+.img {
+    min-height: 100%;
+    margin-left: auto;
 }
