--- a/src/pages/WelcomePage/welcomePage.module.css
+++ b/src/pages/WelcomePage/welcomePage.module.css
@@ -1,4 +1,5 @@
 .home_container{
+    position: relative;
     background-image: url('../../images/mobile_images/hero-mobile.png');
     background-repeat: no-repeat;
     background-position: right bottom;
@@ -13,7 +14,6 @@
     padding-right: 20px;
     padding-left: 20px;
 }
-
 @media (min-resolution: 192dpi) {
 .home_container {
     background-image: url('../../images/mobile_images/hero-mobile@2x.png');
