--- a/src/components/StatisticsInfo/statisticsInfo.module.css
+++ b/src/components/StatisticsInfo/statisticsInfo.module.css
@@ -106,6 +106,25 @@ p{
         height: 110px;
         margin-right: 32px;
     }
+    .play{
+        width: 40px;
+        height: 40px;
+        margin-left: 23px;
+    }
+    .num{
+        font-size: 24px;
+        line-height: 24px;
+        margin-bottom: 8px;
+    }
+    .human_icon{
+        width: 20px;
+        height: 20px;
+    }
+    .num_cal{
+        font-size: 48px;
+        line-height: 50px;
+        margin-right: 11px;
+    }
 }
 @media screen and (min-width: 1440px){
     .wrapper{
