--- a/src/components/DayProdcuts/DayProducts.module.css
+++ b/src/components/DayProdcuts/DayProducts.module.css
@@ -1,35 +1,172 @@
-.productsContainer{
-    display: flex;
+.productsContainer {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #efede833;
+  border-radius: 12px;
+  background: linear-gradient(
+      0deg,
+      rgba(239, 237, 232, 0.053),
+      rgba(239, 237, 232, 0.052)
+    ),
+    linear-gradient(0deg, rgba(239, 237, 232, 0.046), rgba(239, 237, 232, 0.05));
+  padding: 16px;
+  height: 250px;
+  overflow: auto;
+}
+.productsTopBar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.productsBottomBar {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.productsTitle {
+  font-size: 14px;
+  line-height: 18px;
+  color: #efede843;
+}
+.noProductsText {
+  font-size: 14px;
+  line-height: 18px;
+  color: #efede83a;
+  margin: 0 auto;
+}
+.adaptiveTitlesList {
+  display: none;
+}
+.productsList {
+  display: flex;
+  flex-direction: column;
+  margin-top: 22px;
+  width: inherit;
+}
+.productListLarge {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-bottom: 16px;
+}
+.productListLarge > span {
+  padding: 10px 0px 10px 14px;
+  height: 18px;
+  border: 1px solid #efede84d;
+  border-radius: 12px;
+}
+.productListLarge > p {
+  color: #ef8964;
+}
+.productListSmallProperties {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  margin-bottom: 40px;
+}
+.productListSmall {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 81px;
+}
+.productListSmall > span {
+  display: flex;
+  gap: 8px;
+  padding: 10px 0px 10px 14px;
+  height: 18px;
+  border: 1px solid #efede84d;
+  border-radius: 12px;
+}
+.productListSmall > p {
+  color: #ef8964;
+}
+@media screen and (min-width: 375px) {
+}
+@media screen and (min-width: 768px) {
+  .productsBottomBar {
+    display: block;
+  }
+
+  .productsList {
+    margin-top: 0;
+  }
+  .productListLarge {
+    margin-right: 8px;
+    width: 204px;
     flex-direction: column;
-    border: 1px solid #EFEDE833;
-    border-radius: 12px;
-    background: linear-gradient(0deg, rgba(239, 237, 232, 0.073), rgba(239, 237, 232, 0.073)),
-linear-gradient(0deg, rgba(239, 237, 232, 0.05), rgba(239, 237, 232, 0.05));
-    padding: 16px;
-    min-height: 250px;
-    overflow:  auto;
-}
-.productsTopBar{
-    width: 100%;
-   display: flex;
-   align-items: center;
-   flex-direction: row;
-   justify-content: space-between;
-}
-.productsBottomBar{
-    width: 100%;
+    gap: 5px;
+    margin-bottom: 8px;
+  }
+  .productListLarge:nth-child(2) {
+    width: 128px;
+  }
+  .productListLarge > p {
+    display: none;
+  }
+  .productListSmallProperties {
+    gap: 8px;
+    margin-bottom: 8px;
+  }
+  .productListSmall > p {
+    display: none;
+  }
+
+  .adaptiveTitlesList {
     display: flex;
-    align-items: center;
-    margin-top: 125px;
-}
-.productsTitle{
-    font-size: 14px;
+    margin-top: 16px;
+    margin-bottom: 8px;
+  }
+  .adaptiveTitle {
+    height: 18px;
+    font-size: 12px;
     line-height: 18px;
-    color: #efede843;
+    color: #ef8964;
+  }
+  .adaptiveTitle:nth-child(1) {
+    width: 24px;
+    margin-right: 188px;
+  }
+  .adaptiveTitle:nth-child(2) {
+    margin-right: 87px;
+  }
+  .adaptiveTitle:nth-child(3) {
+    margin-right: 50px;
+  }
+  .adaptiveTitle:nth-child(4) {
+    margin-right: 50px;
+  }
+  .productListItem {
+    display: flex;
+    flex-direction: row;
+  }
 }
-.noProductsText{
-    font-size: 14px;
-    line-height: 18px;
-    color: #efede83a;
-    margin: 0 auto;
+@media screen and (min-width: 1440px) {
+  .productsContainer {
+    width: 826px;
+    height: 234px;
+  }
+  .productListLarge {
+    width: 212px;
+  }
+  .productListLarge:nth-child(2) {
+    width: 166px;
+  }
+  .productListSmall {
+    width: 105px;
+  }
+  .adaptiveTitle:nth-child(1) {
+    margin-right: 196px;
+  }
+  .adaptiveTitle:nth-child(2) {
+    margin-right: 125px;
+  }
+  .adaptiveTitle:nth-child(3) {
+    margin-right: 69px;
+  }
+  .adaptiveTitle:nth-child(4) {
+    margin-right: 75px;
+  }
 }
