--- a/src/components/DayProdcuts/DayProducts.module.css
+++ b/src/components/DayProdcuts/DayProducts.module.css
@@ -20,6 +20,12 @@
   flex-direction: row;
   justify-content: space-between;
 }
+.Link {
+  color: #E6533C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+}
 .productsBottomBar {
   width: 100%;
   display: flex;
