--- a/src/pages/WelcomePage/welcomePage.module.css
+++ b/src/pages/WelcomePage/welcomePage.module.css
@@ -87,6 +87,12 @@
     background-color: #EF8964;
 }
 
+@media screen and (max-width: 375px) {
+    .home_container{
+        max-width: 375px;
+    }
+  }
+
 @media screen and (min-width: 768px){
     .home_container{
         background-image: url('../../images/tablet_images/hero-tablet.png');
