--- a/src/pages/ErrorPage/ErrorPage.module.css
+++ b/src/pages/ErrorPage/ErrorPage.module.css
@@ -57,3 +57,10 @@
     min-height: 100%;
     margin-left: auto;
 }
+
+
+/* 
+base
+@media screen and (min-width:375px) 
+@media screen and (min-width:768px) 
+@media screen and (min-width:1440px)*/
