--- a/src/pages/ErrorPage/ErrorPage.module.css
+++ b/src/pages/ErrorPage/ErrorPage.module.css
@@ -2,40 +2,48 @@
     position: relative;
     min-height: 100vh;
     margin: 0;
+    padding: 0;
     background-color: #000000;
     display: flex;
+    background-image: url('../../images/mobile_images/hero-mobile.png');
+    background-position: right bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
 }
 
 .errorContainer {
     background-color: rgba(230, 83, 60, 1);
-    padding-left: 96px;
-    width: 669px;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 100%;
     min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 24px;
-
+    align-items: center;
 }
 
 .title {
-    font-size: 160px;
+    font-size: 66px;
     font-weight: 500;
-    line-height: 150px;
-    letter-spacing: 0.01em;
+    line-height: 66px;
+    letter-spacing: 0.01em;  
     text-align: left;
     color: rgba(239, 237, 232, 1);
     margin: 0;
+    margin-bottom: 14px;
 }
 
 .description {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0px;
-    text-align: left;
     color: rgba(239, 237, 232, 1);
-    width: 486px;
+    max-width: 200px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0px;
+    text-align: center;
+    margin-bottom: 28px;
 }
 
 .btn {
@@ -44,23 +52,70 @@
     background-color: inherit;
     border: 1px solid rgba(239, 237, 232, 0.3);
     border-radius: 12px;
-    width: 204px;
-    height: 56px;
-    font-size: 20px;
+    width: 147px;
+    height: 42px;
+    font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: 18px;
     letter-spacing: 0em;
     text-align: center;
 }
 
-.img {
-    min-height: 100%;
-    margin-left: auto;
+
+@media screen and (min-width:375px){
+    .errorContainer {
+        width: 240px;
+        align-items: unset;
+    }
+    .description {
+        text-align: left;
+    }
 }
 
+@media screen and (min-width:768px) {
+    .container {
+        background-position: top 131px left 331px;
+        background-size: contain;
+    }
+    .errorContainer {
+        width: 420px;
+    }
+    .title {
+        font-size: 160px;
+        font-weight: 500;
+        line-height: 150px;
+        letter-spacing: 0.01em;
+        text-align: left;
+    }
+    .description {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0px;
+        text-align: left;
+        max-width: 356px;
+    }
+    .btn {
+        width: 204px;
+        height: 56px;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: center;
+    }
+}
 
-/* 
-base
-@media screen and (min-width:375px) 
-@media screen and (min-width:768px) 
-@media screen and (min-width:1440px)*/
+@media screen and (min-width:1440px) {
+    .container {
+        background-position: right bottom;
+    }
+    .errorContainer {
+        padding-left: 96px;
+        width: 669px;
+    }
+    .description {
+        max-width: 477px;
+    }
+}
+
