--- a/src/components/SignUpForm/signUpForm.module.css
+++ b/src/components/SignUpForm/signUpForm.module.css
@@ -2,14 +2,7 @@
     padding-left: 20px;
     padding-right: 20px;
 }
-.container {
-    position: relative;
-    min-height: 100vh;
-    background-color: #000000;
-    margin: 0;
-    display: flex;
-    align-items: flex-start;
-}
+
 .formContainer{
     width: 100%;
     max-width: 335px;
@@ -45,6 +38,7 @@
     text-align: left;
     margin-top: 28px;
     margin-bottom: 12px;
+    cursor: pointer;
 }
 .form {
     display: flex;
@@ -75,6 +69,7 @@
     margin: 0;
     background-color: inherit;
     border: 1px solid rgba(239, 237, 232, 0.3);
+    color: #EFEDE8;
     width: 93%;
     max-width: 335px;
     height: 46px;
