--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -75,6 +75,7 @@
     margin: 0;
     background-color: inherit;
     border: 1px solid rgba(239, 237, 232, 0.3);
+    color: #EFEDE8;
     width: 93%;
     max-width: 335px;
     height: 46px;
