--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import-normalize; /* bring in normalize.css styles */
-
 @font-face {
   font-family: Roboto-400;
   src: url(../src/fonts/Roboto-Regular.ttf);
@@ -37,6 +35,12 @@
   /* ANIMATIONS */
   --function-duration: 350ms;
   --function-timing: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.container {
+  max-width: 375px;
+  padding-left: 20px ;
+  padding-right: 20px ;
 }
 
 .hidden {
