--- a/src/pages/ErrorPage/ErrorPage.module.css
+++ b/src/pages/ErrorPage/ErrorPage.module.css
@@ -4,14 +4,18 @@
     margin: 0;
     padding: 0;
     background-color: #000000;
-    display: flex;
     background-image: url('../../images/mobile_images/hero-mobile.png');
-    background-position: right bottom;
+    background-position: right top 131px;
     background-size: contain;
     background-repeat: no-repeat;
+    display: flex;
     width: 100%;
 }
-
+@media (min-resolution: 192dpi) {
+    .container {
+        background-image: url('../../images/mobile_images/hero-mobile@2x.png');
+    }
+}
 .errorContainer {
     background-color: rgba(230, 83, 60, 1);
     padding-left: 20px;
@@ -64,7 +68,8 @@
 
 @media screen and (min-width:375px){
     .errorContainer {
-        width: 240px;
+        width: unset;
+        max-width: 240px;
         align-items: unset;
     }
     .description {
@@ -74,11 +79,17 @@
 
 @media screen and (min-width:768px) {
     .container {
-        background-position: top 131px left 331px;
+        background-image: url('../../images/tablet_images/hero-tablet.png');
+        background-position: right bottom;
         background-size: contain;
     }
+    @media (min-resolution: 192dpi) {
+        .home_container {
+            background-image: url('../../images/tablet_images/hero-tablet@2x.png');
+        }
+    }
     .errorContainer {
-        width: 420px;
+        max-width: 420px;
     }
     .title {
         font-size: 160px;
@@ -108,11 +119,17 @@
 
 @media screen and (min-width:1440px) {
     .container {
-        background-position: right bottom;
+        background-image: url('../../images/desktop_images/hero-desktop.png');
+        padding: 0;
+    }
+    @media (min-resolution: 192dpi) {
+        .home_container {
+            background-image: url('../../images/desktop_images/hero-desktop@2x.png');
+        }
     }
     .errorContainer {
         padding-left: 96px;
-        width: 669px;
+        max-width: 669px;
     }
     .description {
         max-width: 477px;
