--- a/src/pages/ErrorPage/ErrorPage.module.css
+++ b/src/pages/ErrorPage/ErrorPage.module.css
@@ -90,6 +90,8 @@
     }
     .errorContainer {
         max-width: 420px;
+        padding-left: 32px;
+        padding-right: 32px;
     }
     .title {
         font-size: 160px;
@@ -97,6 +99,7 @@
         line-height: 150px;
         letter-spacing: 0.01em;
         text-align: left;
+        margin-bottom: 28px;
     }
     .description {
         font-size: 16px;
@@ -105,6 +108,7 @@
         letter-spacing: 0px;
         text-align: left;
         max-width: 356px;
+        margin-bottom: 28px;
     }
     .btn {
         width: 204px;
@@ -129,6 +133,7 @@
     }
     .errorContainer {
         padding-left: 96px;
+        padding-right: 96px;
         max-width: 669px;
     }
     .description {
