--- a/src/pages/ErrorPage/ErrorPage.module.css
+++ b/src/pages/ErrorPage/ErrorPage.module.css
@@ -5,8 +5,8 @@
     padding: 0;
     background-color: #000000;
     background-image: url('../../images/mobile_images/hero-mobile.png');
-    background-position: right top 131px;
-    background-size: contain;
+    background-position: right bottom;
+    background-size: 75%;
     background-repeat: no-repeat;
     display: flex;
     width: 100%;
@@ -80,7 +80,6 @@
 @media screen and (min-width:768px) {
     .container {
         background-image: url('../../images/tablet_images/hero-tablet.png');
-        background-position: right bottom;
         background-size: contain;
     }
     @media (min-resolution: 192dpi) {
