--- a/src/pages/SignInPage/SignInPage.module.css
+++ b/src/pages/SignInPage/SignInPage.module.css
@@ -1,7 +1,8 @@
 .container {
-    background-image: url('../../images/mobile_images/hero-mobile.png');
+    background-image: linear-gradient(168.14deg, #040404 14.75%, rgba(4, 4, 4, 0) 82.97%),
+linear-gradient(73.21deg, #040404 6.11%, rgba(4, 4, 4, 0) 36.68%), url('../../images/mobile_images/hero-mobile.png');
     background-position: right bottom;
-    background-size: contain;
+    background-size: 70% contain;
     background-repeat: no-repeat;
     position: relative;
     min-height: 100vh;
@@ -9,6 +10,8 @@
     margin: 0;
     width: 100%;
 }
+
+
 
 @media (min-resolution: 192dpi) {
     @media (min-resolution: 192dpi) {
@@ -22,6 +25,7 @@
     .container {
         background-image: url('../../images/tablet_images/hero-tablet.png');
         padding: 0;
+        background-size: contain ;
     }
 
     @media (min-resolution: 192dpi) {
