--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,19 @@
   src: url(../src/fonts/Roboto-Bold.ttf);
 }
 
+html {
+  box-sizing: border-box;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+
 :root {
   /* COLORS */
   --black-color: #040404;
@@ -68,6 +81,8 @@
 body {
   margin: 0;
   background-color: var(--black-color);
+    -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body,
@@ -109,14 +124,7 @@ h6 {
   margin: 0;
 }
 
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* 
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
