--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -2,10 +2,6 @@
     padding-left: 20px;
     padding-right: 20px;
 }
-.message{
-    background-color: #fff;
-    color: red;
-}
 .formContainer {
     width: 100%;
     max-width: 335px;
@@ -85,7 +81,15 @@
     border-radius: 12px;
     padding-left: 14px;
 }
-
+.input:hover{
+    border: 1px solid var(--orange-main-color);
+}
+.error{
+    border: 1px solid var(--error-color);
+}
+.success{
+    border: 1px solid var(--success-color);
+}
 .input::placeholder {
     font-size: 14px;
     font-weight: 400;
@@ -93,6 +97,46 @@
     letter-spacing: 0em;
     text-align: left;
     color: rgba(239, 237, 232, 0.6);
+}
+.messageInput{
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.errorText{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    text-align: left;
+    color: var(--error-color);
+}
+.successText{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    text-align: left;
+    color: var(--success-color);
+}
+.errorSvg{
+    fill: var(--error-color);
+    width: 16px;
+    height: 16px;
+    margin-right: 4px;
+    margin-top: 1px;
+}
+.successSvg{
+    fill: var(--success-color);
+    width: 16px;
+    height: 16px;
+    margin-right: 4px;
+    margin-top: 1px;
 }
 
 @media screen and (min-width: 768px) {
