--- a/src/components/SignUpForm/signUpForm.module.css
+++ b/src/components/SignUpForm/signUpForm.module.css
@@ -78,8 +78,12 @@
     height: 46px;
     border-radius: 12px;
     padding-left: 14px;
+    outline: none;
 }
 .input:hover{
+    border: 1px solid var(--orange-main-color);
+}
+.input:focus{
     border: 1px solid var(--orange-main-color);
 }
 .error{
