--- a/src/components/SignUpForm/signUpForm.module.css
+++ b/src/components/SignUpForm/signUpForm.module.css
@@ -140,6 +140,15 @@
     margin-right: 4px;
     margin-top: 1px;
 }
+.eyeIcon {
+    stroke: rgba(239, 237, 232, 1);
+    width: 20px;
+    height: 20px;
+    position: relative;
+    left: -35px;
+    bottom: -3px;
+}
+
 @media screen and (min-width: 768px){
     .wrapper{
         padding-left: 32px;
