--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -152,6 +152,14 @@
     left: -35px;
     bottom: -3px;
 }
+.eyeIconOff {
+    stroke: rgba(239, 237, 232, 1);
+    width: 20px;
+    height: 20px;
+    position: relative;
+    left: -35px;
+    bottom: -3px;
+}
 
 @media screen and (min-width: 768px) {
     .loginContainer {
