added hover and focus for btn

--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -42,6 +42,10 @@
     margin-bottom: 12px;
     cursor: pointer;
 }
+.btn:hover,
+.btn:focus {
+    background-color: #EF8964;
+}
 
 .form {
     display: flex;
