--- a/src/components/SignUpForm/signUpForm.module.css
+++ b/src/components/SignUpForm/signUpForm.module.css
@@ -43,6 +43,11 @@
     margin-bottom: 12px;
     cursor: pointer;
 }
+.btn:hover,
+.btn:focus {
+    background-color: #EF8964;
+}
+
 .form {
     display: flex;
     flex-direction: column;
