--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -9,7 +9,7 @@
 .avatar {
   width: 90px;
   height: 90px;
-  border-radius: 100px;
+  border-radius: 50%;
   border: 1px solid #e6533c;
   display: flex;
   justify-content: center;
