--- a/src/pages/ProductsPage/ProductsPage.module.css
+++ b/src/pages/ProductsPage/ProductsPage.module.css
@@ -89,6 +89,10 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    width: 704px;
+    height: auto;
+    max-height: 100vh;
+
     overflow-y: scroll;
   }
 
