--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -4,7 +4,6 @@
 }
 .title {
   color: #efede8;
-  font-family: 'RobotoBold';
   font-size: 24px;
   line-height: 28px;
   margin-top: 40px;
@@ -15,6 +14,7 @@
   align-items: center;
   gap: 14px;
   margin-top: 40px;
+  margin-left: 10px;
 }
 
 @media screen and (min-width: 768px) {
@@ -44,6 +44,6 @@
   }
   .wrapper_form {
     border-right: 1px solid rgba(239, 237, 232, 0.2);
-    padding-right: 100px;
+    padding-right: 50px;
   }
 }
