--- a/src/components/ExercisesTable/ExerciseModal.module.css
+++ b/src/components/ExercisesTable/ExerciseModal.module.css
@@ -158,6 +158,47 @@
   fill: white;
 }
 
+.welDoneWindow {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 335px;
+  height: 384px;
+  border-radius: 12px;
+  border: 1px solid rgba(239, 237, 232, 0.2);
+  background: #10100f;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
+}
+.title {
+  color: #efede8;
+  /* font-family: Roboto; */
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px; /* 133.333% */
+}
+.doneTip {
+  color: rgba(239, 237, 232, 0.3);
+  /* font-family: Roboto; */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+}
+.doneScore {
+  color: #e6533c;
+  /* font-family: Roboto; */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 128.571% */
+}
+
 @media screen and (min-width: 768px) {
   .modalWindow {
     width: 694px;
