--- a/src/components/Daily/Daily.module.css
+++ b/src/components/Daily/Daily.module.css
@@ -24,13 +24,13 @@
 
 .text {
   color: rgba(239, 237, 232, 0.8);
-  font-family: 'RobotoRegular';
+  font-family: 'Roboto-400';
   font-size: 12px;
   line-height: 16px;
 }
 .value {
   color: var(--white-color);
-  font-family: 'RobotoBold';
+  font-family: 'Roboto-700';
   font-size: 24px;
   line-height: 1.3;
   margin-top: auto;
