--- a/src/components/ExclamationMark/ExclamationMark.module.css
+++ b/src/components/ExclamationMark/ExclamationMark.module.css
@@ -8,14 +8,15 @@
   margin-top: 40px;
 }
 
-.wrapper_mark {
+.icon_mark {
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 100px;
   width: 24px;
   height: 24px;
-  background-color: var(--beige-color);
+  fill: var(--beige-color);
+  stroke: #fff;
 }
 .text {
   font-family: 'RobotoRegular';
