--- a/src/components/ExclamationMark/ExclamationMark.module.css
+++ b/src/components/ExclamationMark/ExclamationMark.module.css
@@ -18,7 +18,7 @@
   background-color: var(--beige-color);
 }
 .text {
-  font-family: 'RobotoRegular';
+  font-family: 'Roboto-400';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
